# QUIZFLOW-MultiAgent

./: .gitignore  README.md  package.json  run.sh  setup.sh  start.sh
backend/: env.example  env.template  pyproject.toml
backend/data/: example_quiz.json  example_results.json  example_topics.json  quiz.json  results.json  results_5cd090e5-cd11-479d-a785-9ae6587fa113.json  results_98b1c5a8-9664-42de-bdea-0d3051306695.json  results_ea58c641-f295-424b-abfa-019eba250586.json  topics.json
backend/src/quizflow/: __init__.py  api.py  crew.py  main.py
backend/src/quizflow/config/: agents.yaml  tasks.yaml
backend/src/quizflow/tools/: __init__.py  analytics_tools.py  hint_tools.py  llm_tools.py  notification_tools.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: LoadingSpinner.jsx  Navbar.jsx
frontend/src/pages/: Dashboard.jsx  History.jsx  Quiz.jsx  Results.jsx
frontend/src/utils/: api.js
