[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quizflow"
version = "1.0.0"
description = "Production-ready AI quiz platform backend"
authors = [{name = "QuizFlow Team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pydantic>=2.5.0",
    "crewai[tools]>=0.74.0",
    "jinja2>=3.1.2"
]

[project.scripts]
quizflow-api = "quizflow.api:start_server"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]