[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quizflow"
version = "1.0.0"
description = "Production-ready AI quiz platform backend"
authors = [{name = "QuizFlow Team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pydantic>=2.5.0",
    "crewai[tools]>=0.74.0",
    "jinja2>=3.1.2",
    "openai>=1.30.0",
    "google-generativeai>=0.8.0",
    "wikipedia>=1.4.0",
    "requests>=2.31.0",
    "firebase-admin>=6.4.0",
    "google-cloud-firestore>=2.14.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.120.0",
    "twilio>=9.0.0",
    "google-analytics-data>=0.18.0",
    "beautifulsoup4>=4.12.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.0.30"
]

[project.scripts]
quizflow-api = "quizflow.api:start_server"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]